# GiftForPp-esp32_c3-microDesk

./: CMakeLists.txt  Makefile  README.md  http_api.c  http_api.h  partitions.csv  sdkconfig  sdkconfig.defaults  wifi_cz.c  wifi_cz.h
gift_3d/: 3D_ESP32-C3显示器_JLC.SLDASM  ESP32-C3显示器.SLDPRT  底座.STL  零件1.SLDPRT  零件3.SLDPRT  零件4.SLDPRT  顶盖_o.STL  顶盖_s.STL
main/: AuthenticationServer.c  CMakeLists.txt  WiFi_icon.c  dns_server.c  gl_pic.c  https_api.c  lvgl_task.c  main.c  man_pic.c  nvs_cz.c  screen_backlight.c  unkonk.c  uploadscript.html  wifi_cz.c
main/image_c/: clear.c  cloudy.c  cold.c  foggy.c  haze.c  heavy_snow.c  humi_img.c  ice_rain.c  light_rain.c
main/include/: AuthenticationServer.h  dns_server.h  https_api.h  lvgl_task.h  main.h  nvs_cz.h  screen_backlight.h  wifi_cz.h
useful_fonts/: 常用字.txt
